# ypricemagic

./: .buildinfo  .env.sample  .gitignore  .pre-commit-config.yaml  ABANDONED_TODOS.md  AGENTS.md  CONTRIBUTING.md  FUNDING.json  Makefile  README.md  brownie-config.yaml  caching.html  cli.html  environment.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.py
.factory/: init.sh  services.yaml
.factory/investigation/: trade-path-behaviors.md
.factory/reports/: cache-inventory.md  cache-ops-behaviors.md  validation-contract-review.md
.github/ISSUE_TEMPLATE/: add_a_chain.yml
.github/workflows/: black.yaml  codeql-analysis.yml  compile.yaml  (+5 more)
_modules/: functools.html  index.html  logging.html
_sources/: caching.rst.txt  cli.rst.txt  environment.rst.txt  index.rst.txt
docs/: caching.rst  cli.rst  conf.py  index.rst
scripts/: debug-curve.py  debug-price.py  smoke_test_cross.py  smoke_test_v2_index.py  smoke_test_v3_index.py
source/: modules.html  y.classes.html  y.html  y.interfaces.balancer.html  y.interfaces.compound.html  y.interfaces.curve.html  y.interfaces.html  y.interfaces.uniswap.html  y.prices.dex.balancer.html  y.prices.dex.html  y.prices.dex.uniswap.html  y.prices.eth_derivs.html  y.prices.html  y.prices.lending.html  y.prices.stable_swap.html  y.prices.tokenized_fund.html  y.prices.utils.html  y.utils.html
tests/: conftest.py  constants.py  fixtures.py  test_cache_bounds.py  test_cachebox.py  test_constants.py  test_dank_import_guard.py  test_erc4626.py  test_middleware.py  test_misc_fixes.py  test_price_result.py  test_purge.py  test_time.py  test_trade_path_sources.py  test_vttl_cache.py
y/: ENVIRONMENT_VARIABLES.py  __init__.py  _cache.py  _dank_import_guard.py  _decorators.py  cli.py  constants.py  contracts.py  convert.py  datatypes.py  decorators.py  erc20.py  exceptions.py  monkey_patches.py  networks.py  time.py  typing.py
ypricemagic/: __init__.py  aave.py  balancer.py  belt.py  buckets.py  chainlink.py  classes.py  compound.py  constants.py  cream.py  curve.py  ellipsis.py  exceptions.py  froyo.py  gelato.py  ib.py  magic.py  mooniswap.py  mstablefeederpool.py  networks.py  piedao.py  tokensets.py  uniswap.py  wsteth.py  yearn.py
ypricemagic.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+407 files in other folders)
