[build-system]
requires = [
  "setuptools",
  "wheel",
  "mypy[mypyc]==1.20.0",
  "pony-stubs==0.5.2",
  "types-python-dateutil",
  "types-cachetools",
  "types-requests",
  "aiosqlite==0.22.1",
  "bobs_lazy_logging==0.0.5",
  "dank-mids==4.20.207; platform_system == 'MacOS' or (platform_system == 'Linux' and platform_machine != 'i686')",
  "eth-brownie==1.22.0.dev4; platform_system == 'Linux' and platform_machine != 'i686'",
  "eth-retry==0.3.7",
  "eth-typing==6.0.0",
  "ez-a-sync==0.34.2",
  "faster-eth-abi==5.2.27",
  "faster-hexbytes==1.3.6",
  "typed-envs==0.2.4",
]

[tool.mypy]
plugins = ["typed_envs.mypy_plugin", "a_sync_mypy_plugin"]
files = ["."]
strict = true
pretty = true
show_error_codes = true
show_error_context = true
install_types = true
non_interactive = true

[tool.black]
line-length = 100
